Fixing navigation bugs on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@media only screen { figure { margin: 0; } .thumbimg { display: block; overflow: hidden; max-width: 100%; } .site-title { float: left; font-size: 26px; line-height: 56px; letter-spacing: -1px; margin-bottom: 0; height: 32px; text-align: left; text-decoration: none; z-index: 0; color: black; width: 300px; } .page-link { color: #FE967E; } .site-nav .page-link { text-decoration: none; color: #FE967E; } .site-nav .page-link:hover { color: #fd5832; text-decoration: underline; } .site-nav .page-link.selected { color: #545454; } .site-nav .page-link.selected:hover { text-decoration: none; } }
+@media only screen { figure { margin: 0; } .thumbimg { display: block; overflow: hidden; max-width: 100%; } .site-title { float: left; font-size: 26px; line-height: 56px; letter-spacing: -1px; margin-bottom: 0; height: 32px; text-align: left; text-decoration: none; z-index: 0; color: black; width: 300px; } .page-link { color: #4C36EC; } .site-nav .page-link { text-decoration: none; color: #4C36EC; } .site-nav .page-link:hover { color: #070320; border-bottom: 2px solid #4C36EC; } .site-nav .page-link.selected { color: #545454; border-bottom: 2px solid #4C36EC; } .site-nav .page-link.selected:hover { text-decoration: none; } }
 
 /** Reset some basic elements */
 body, h1, h2, h3, h4, h5, h6, p, blockquote, pre, hr, dl, dd, ol, ul, figure { margin: 0; padding: 0; }
@@ -22,7 +22,7 @@ figcaption { font-size: 14px; }
 /** Lists */
 ul, ol { margin-left: 30px; }
 
-li { color: #FE967E; }
+li { color: #4C36EC; }
 
 li > ul, li > ol { margin-bottom: 0; }
 
@@ -32,9 +32,9 @@ h1, h2, h3, h4, h5, h6 { font-weight: 300; }
 /** Links */
 a { color: #545454; text-decoration: underline; }
 
-a:visited { color: #FE967E; }
+a:visited { color: #4C36EC; }
 
-a:hover { color: #fd5832; }
+a:hover { color: #2812c3; }
 
 /** Blockquotes */
 blockquote { color: #777777; border-left: 4px solid #dddddd; padding-left: 15px; font-size: 18px; letter-spacing: -1px; font-style: italic; }
@@ -66,13 +66,17 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 /** Site header */
 .site-header { min-height: 56px; margin-top: 56px; text-align: right; position: relative; }
 
-.site-nav { line-height: 56px; width: calc(100% - 300px); margin: 0 auto; float: right; }
+h1.workTitle { font-size: 1.4em; }
+
+.site-title h3 { font-size: 1em; }
+
+.site-nav { line-height: 56px; margin: 0 auto; float: right; }
 
 .site-nav .page-link { line-height: 1.5; }
 
 .site-nav .page-link:not(:first-child) { margin-left: 20px; }
 
-@media screen and (max-width: 1024px) { .site-nav .menu-icon > svg { width: 18px; height: 15px; } .site-nav .menu-icon > svg path { fill: #373737; } }
+@media screen and (max-width: 1024px) { .site-nav h1 { font-size: 1.2em; } .site-nav .menu-icon > svg { width: 18px; height: 15px; } .site-nav .menu-icon > svg path { fill: #373737; } }
 
 /** Site footer */
 .site-footer { padding: 30px 0; }
@@ -166,7 +170,7 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 
 .projectThumb:hover .thumbLabel { display: flex; align-items: center; justify-content: center; background-color: #f0f0f0; opacity: 0.9; height: 100%; transform: scale(1.05); transition: all 600ms; }
 
-@media only screen and (min-width: 768px) { .flex-container { display: flex; } .cs-overview-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; margin-right: 30px; } .cs-overview-col:last-of-type { margin-right: 0; } .cs-white-center .paragraph p.description, .cs-grey-center .paragraph p.description { max-width: 40%; margin: auto; } .projectThumb { width: 49%; float: left; margin-right: 2%; } .projectThumb:hover { transition: all .3s ease; -moz-transition: all .3s ease; -webkit-transition: all .3s ease; -o-transition: all .3s ease; } .projectThumb:nth-child(2n) { margin-right: 0%; } .thumbLabel { display: none; } .thumbLabel:hover { display: block; } }
+@media only screen and (min-width: 768px) { h1.workTitle { font-size: 2em; } .site-title h3 { font-size: 1.17em; } .site-nav { width: calc(100% - 300px); } .site-nav.on-case-study { width: 100%; } .flex-container { display: flex; } .cs-overview-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; margin-right: 30px; } .cs-overview-col:last-of-type { margin-right: 0; } .cs-white-center .paragraph p.description, .cs-grey-center .paragraph p.description { max-width: 40%; margin: auto; } .projectThumb { width: 49%; float: left; margin-right: 2%; } .projectThumb:hover { transition: all .3s ease; -moz-transition: all .3s ease; -webkit-transition: all .3s ease; -o-transition: all .3s ease; } .projectThumb:nth-child(2n) { margin-right: 0%; } .thumbLabel { display: none; } .thumbLabel:hover { display: block; } }
 
 /** Syntax highlighting styles */
 .highlight { background: #fff; }
